crates/test-files/fixtures/compile_errors/invalid_var_declaration_1.fe
contract Foo {
    pub fn bar() {
        let (x,): Array<u256, 20> = [1, 2, 3, 4, 5, 6, 7, 8, 9, 0, 2, 1, 3, 4, 5, 6, 7, 8, 9, 0]
    }
}
